2000-01-04 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Start to save parameters in file
-Add parameters in KchartWizard